https://dmnsgn.github.io/media-codecs/ crash tab process
Categories
(Core :: Audio/Video: Web Codecs, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox122 | --- | disabled |
firefox123 | --- | disabled |
firefox124 | --- | disabled |
firefox125 | --- | fixed |
People
(Reporter: 428rinsuki+bugzilla.mozilla.org, Assigned: padenot)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: crash, nightly-community, regression)
Crash Data
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:124.0) Gecko/20100101 Firefox/124.0
Steps to reproduce:
- Open https://dmnsgn.github.io/media-codecs/ in Firefox Nightly
Actual results:
tab process crashes.
mozregression shows this pushlog: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=c4ed504122f310fc62c530dc429a40a61a8bcbdf&tochange=98d2ecb3f476864bbf310ab893e7a4ae4f77f9e6
Reproduced in:
- macOS 14.4 beta (23E5180j) + Firefox Nightly (2024-02-01)
- Windows Server 2019 + Firefox Nightly (2024-02-02)
![]() |
||
Comment 1•2 years ago
|
||
Crash report: https://crash-stats.mozilla.org/report/index/0e9ebe62-5a52-4e8d-85d1-e0b240240202
MOZ_CRASH Reason: MOZ_CRASH(The string should always contain a valid codec at this point.)
Top 7 frames of crashing thread:
0 xul.dll mozilla::dom::VideoEncoderConfigInternal::ToEncoderConfig const dom/media/webcodecs/VideoEncoder.cpp:225
1 xul.dll mozilla::EncoderSupport::Supports dom/media/EncoderTraits.h:17
2 xul.dll mozilla::dom::CanEncode dom/media/webcodecs/VideoEncoder.cpp:380
3 xul.dll mozilla::dom::VideoEncoder::IsConfigSupported dom/media/webcodecs/VideoEncoder.cpp:566
4 xul.dll mozilla::dom::VideoEncoder_Binding::isConfigSupported dom/bindings/VideoEncoderBinding.cpp:1844
5 xul.dll mozilla::dom::StaticMethodPromiseWrapper dom/bindings/BindingUtils.cpp:3297
6 ? @0x000002a7a50230bb
![]() |
||
Updated•2 years ago
|
Comment 2•2 years ago
|
||
:padenot, since you are the author of the regressor, bug 1749047, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
Assignee | ||
Comment 3•2 years ago
|
||
Updated•2 years ago
|
Assignee | ||
Updated•2 years ago
|
Comment 4•1 years ago
|
||
The severity field is not set for this bug.
:padenot, could you have a look please?
For more information, please visit BugBot documentation.
Comment 5•1 years ago
|
||
Set release status flags based on info from the regressing bug 1749047
Updated•1 year ago
|
Updated•1 year ago
|
Comment 8•1 year ago
|
||
bugherder |
Updated•1 year ago
|
Assignee | ||
Updated•1 year ago
|
Description
•