Bug 1878300 - Only accept vp8 for vp8 codec string. r=chunmin

Differential Revision: https://phabricator.services.mozilla.com/D200678